tian/cd22/web168-git/k207/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress207
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: gitsrv.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitsrv207
                port:
                  number: 80
    - host: gitweb.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitsrv207-web
                port:
                  number: 80
    - host: vscode.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vscode207
                port:
                  number: 80
